feat: impl common api server (#576)
* temp

* fix: logic

* update test

* fix: shcema

* fix: time range

* fix: update model

* chore: tracer

* fix: trace

* fix: infra

* fix: tf

* fix: module

* fix

* fix

* fix: lint

* fix: agent

* fmt

* fix
